--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "start": "concurrently \"npm run storybook\" \"npm run build -- --watch\"",
     "build-storybook": "build-storybook"
   },
+  "storybook": {
+    "displayName": "Outline",
+    "unsupportedFrameworks": ["react-native"]
+  },
   "keywords": [
-    "addon",
+    "storybook-addons",
     "outline",
     "css",
-    "react",
-    "storybook"
+    "layout",
+    "debug"
   ],
   "author": "winkerVSbecks",
   "license": "MIT",
@@ -36,10 +40,17 @@
     "@storybook/react": "next",
     "babel-loader": "^8.1.0",
     "concurrently": "^5.3.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
     "rimraf": "^3.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@storybook/addons": "^6.1.0-beta.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "peerDependencies": {
+    "@storybook/addons": "next",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
