--- a/package.json
+++ b/package.json
@@ -43,23 +43,20 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
-    "@storybook/addon-actions": "^6.1.0-beta.6",
-    "@storybook/addon-essentials": "^6.1.0-beta.6",
-    "@storybook/react": "^6.1.0-beta.6",
+    "@storybook/addon-actions": "^6.1.10",
+    "@storybook/addon-essentials": "^6.1.10",
+    "@storybook/addons": "^6.1.10",
+    "@storybook/react": "^6.1.10",
     "auto": "^10.3.0",
     "babel-loader": "^8.1.0",
     "concurrently": "^5.3.0",
-    "react-is": "^17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "rimraf": "^3.0.2"
   },
-  "dependencies": {
-    "@storybook/addons": "^6.1.0-beta.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
   "peerDependencies": {
-    "@storybook/addons": "^6.1.0-beta.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@storybook/addons": "^6.0.0",
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0"
   }
 }
