--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
-    "@storybook/addon-actions": "^6.1.10",
-    "@storybook/addon-essentials": "^6.1.10",
-    "@storybook/react": "^6.1.10",
+    "@storybook/addon-actions": "^6.3.0-beta.6",
+    "@storybook/addon-essentials": "^6.3.0-beta.6",
+    "@storybook/react": "^6.3.0-beta.6",
     "auto": "^10.3.0",
     "babel-loader": "^8.1.0",
     "concurrently": "^5.3.0",
@@ -56,7 +56,10 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@storybook/addons": "^6.0.0"
+    "@storybook/addons": "^6.3.0-beta.6",
+    "@storybook/api": "^6.3.0-beta.6",
+    "@storybook/components": "^6.3.0-beta.6",
+    "@storybook/core-events": "^6.3.0-beta.6"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
