--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "@storybook/addons": "^6.3.0-beta.6",
     "@storybook/api": "^6.3.0-beta.6",
     "@storybook/components": "^6.3.0-beta.6",
-    "@storybook/core-events": "^6.3.0-beta.6"
+    "@storybook/core-events": "^6.3.0-beta.6",
+    "ts-dedent": "^2.1.1"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
