Add build support for both cjs and esm

--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   },
   "scripts": {
     "clean": "rimraf ./dist",
-    "build": "babel ./src --out-dir ./dist",
-    "prepublish": "npm run clean && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "npm run clean",
+    "build": "concurrently \"npm run build:cjs\" \"npm run build:esm\"",
+    "build:cjs": "babel ./src -d ./dist/cjs",
+    "build:esm": "babel ./src -d ./dist/esm --env-name esm",
     "storybook": "start-storybook -p 6006",
-    "start": "concurrently \"npm run storybook\" \"npm run build -- --watch\"",
+    "start": "concurrently \"npm run build:esm -- --watch\" \"npm run storybook -- --no-manager-cache --quiet\"",
     "build-storybook": "build-storybook",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "release": "npm run build && auto shipit --base-branch=main"
   },
   "author": "winkerVSbecks",
   "license": "MIT",
-  "main": "dist/preset.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "files": [
     "dist/**/*",
     "README.md",
