--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
-    "@storybook/addon-actions": "^6.3.0-beta.6",
-    "@storybook/addon-essentials": "^6.3.0-beta.6",
-    "@storybook/react": "^6.3.0-beta.6",
+    "@storybook/addon-actions": "^6.3.0",
+    "@storybook/addon-essentials": "^6.3.0",
+    "@storybook/react": "^6.3.0",
     "auto": "^10.3.0",
     "babel-loader": "^8.1.0",
     "concurrently": "^5.3.0",
@@ -60,10 +60,10 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@storybook/addons": "^6.3.0-beta.6",
-    "@storybook/api": "^6.3.0-beta.6",
-    "@storybook/components": "^6.3.0-beta.6",
-    "@storybook/core-events": "^6.3.0-beta.6",
+    "@storybook/addons": "^6.3.0",
+    "@storybook/api": "^6.3.0",
+    "@storybook/components": "^6.3.0",
+    "@storybook/core-events": "^6.3.0",
     "ts-dedent": "^2.1.1"
   },
   "peerDependencies": {
